# TesisOMuerte

./: .gitignore  Interfaz.html  README.md  railway.toml
proyecto/horarios_universidad/: .env.example  README.md  README_START.md  pyproject.toml  requirements.txt  start-api.ps1  start-front.ps1
proyecto/horarios_universidad/app/: ui_streamlit.py
proyecto/horarios_universidad/core/: config.py  data_builder.py  excel_exporter.py  extractor.py  model_builder.py  pipeline.py  solver_runner.py
proyecto/horarios_universidad/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
proyecto/horarios_universidad/horarios_site/: settings.py  wsgi.py
proyecto/horarios_universidad/outputs/: horario_20260322_155048.xlsx  horario_profesores_20260325_182110_772153.xlsx  horario_profesores_20260326_091032_429823.xlsx  horario_profesores_20260326_092128_810556.xlsx  horario_profesores_20260326_100220_125451.xlsx  horario_profesores_20260326_110435_149324.xlsx  horario_profesores_20260326_123154_022705.xlsx  horario_profesores_20260326_123312_836688.xlsx  horario_profesores_20260326_124113_122290.xlsx  horario_profesores_20260326_125908_123053.xlsx  horario_profesores_20260326_131012_520233.xlsx  horario_profesores_20260326_131128_294415.xlsx  horario_profesores_20260326_132248_384895.xlsx  horario_profesores_20260326_133105_571004.xlsx  horario_profesores_20260326_133357_520404.xlsx  horario_profesores_20260326_133537_083027.xlsx  horario_profesores_20260326_133617_467809.xlsx  horario_profesores_20260326_134132_172028.xlsx  (+28 more)
(+103 files in other folders)
