[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduler"
version = "0.1.0"
description = "Motor de generacion de horarios academicos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ortools==9.15.6755",
  "pandas",
  "openpyxl",
  "pymysql",
  "psycopg2-binary",
  "python-dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
